lib/velosiparser/tests/vrs/interface/interface_00_register_not_separated_expected.txt
error: expected `}`, found `reg`
     --> tests/vrs/interface/interface_00_register_not_separated.vrs:3:5
      |
    3 |      reg foo [ 8 ]
      |      ^^^ help: add `}` here.
